--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,18 +152,18 @@ footer {
     margin-bottom: 135px;
 }
 
-#left-column {
+#center-column {
     background: white;
     padding: 25px;
     border: 2px solid #ccc
 }
 
-#left-column {
+#center-column {
     width: 960px;
     float: left;
 }
 
-#left-column h2 {
+#center-column h2 {
     font-size: 24px;
     padding: 15px 0;
     margin-bottom: 20px;
