--- a/Responsive-Portfolio/assets/css/style.css
+++ b/Responsive-Portfolio/assets/css/style.css
@@ -1,207 +1,221 @@
 * {
-    box-sizing: border-box;
-
-}
-body{
-    background: url('../images/new_year_background.png') repeat;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow: auto;
-    color: #777777;
+	font-size: 18px;
+	font-family: Arial;
+  	margin: 0;
+  	box-sizing: border-box;
+  	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-h1 ,h2 ,h3 ,h4 ,h5 , h6 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #4aaaa5;
-    font-weight: bold;
+html {
+	height:100%;
 }
 
-header{
-    background: white;
-    border-bottom: 3px solid #ccc;
-    margin-bottom: 30px;
-}
 
-header h1 {
-    background: #4aaaa5;
-    color: white;
-    display: inline-block;
-    padding: 30px;
-    font-size: 30px;
-}
-
-nav{
-    width: 300px;
-    float: right;
-    margin-top: 35px;
-    text-align: center;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav a {
-    color: #333333;
-    font-size: 18px;
-    padding: 5px 15px;
-    border-right: 2px solid #4aaaa5;
-    text-decoration: none;
-    transition-delay: .3s;
-    transition-property: all;
-    transition-timing-function: ease-in-out;
-}
-
-nav ul li:last-child a {
-    border-right: none;
-    padding-right: none;
-}
-
-nav a:hover {
-    background: #4aaaa5;
-    font-size: 18px;
-    padding: 5px 15px;
-    border-right: 2px solid #4aaaa5;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-    line-height: 22px;
-    margin-bottom: 20px;
-
-}
-
-form label{
-    font-size: 18px;
-    display: block;
-}
-
-input, textarea {
+body {
+  	margin: 0;
+  	height:90%;
     width: 100%;
-    display: block;
-    margin: 5px 0 20px 0;
-    border: 2px solid #ccc;
-    padding: 10px;
-    font-size: 16px;
-
+    background-image: url("../new_year_background.png");
+    background-repeat: repeat;
 }
 
-textarea {
-    height: 300px;
-}
-
-form button {
-    background: #4aaaa5;
-    color: #fff;
-    padding: 10px 20px;
-    margin: 10px 0;
-    font-size: 18px;
-    border: none;
+header {
+	height: 100px;
+	background: #FFFFFF;
+	margin-bottom: 20px;
+	padding-top: 20px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 footer {
-    background: #666;
-    border-top: 5px solid #4aaaa5;
-    color: #ccc;
-    text-align: center;
-    padding: 40px;
-    margin-top: 30px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+	height: 50px;
+	background: #666666;
+	padding: 20px;
+	clear: both;
+	text-align: center;
 }
 
-.wrapper{
-    width: 960px;
-    margin: 0 auto;
+aside {
+	float: left;
+	width: 33%;
+	margin-left: 30px;
+	padding: 20px;
+	background: #FFFFFF;
+	border: 1px solid #FFFFFF;
 }
 
-.inline-img {
-    float:left;
-    margin: 0 15px 15px 0;
-    border: 1px solid #777777;
 
+h1,h2,h3{
+	font-size: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-.portfolio-item {
-    position: relative;
-    margin-bottom: 20px;
-    width: 45%;
+
+h4 {
+	color:#4aaaa5;
+	background-color: #FFFFFF;
+}
+
+#main {
+	float: left;
+	width: 50%;
+	padding: 20px;
+	margin-left: 50px;
+	background: #FFFFFF;
+}
+
+#connect {
+	float: left;
+	width: 175px;
+	background: #FFFFFF;
+}
+
+#full {
+	clear: both;
+	width: 100%;
+	min-height: 100%;
+  	margin-bottom: -200px;
+}
+
+#name {
+	float: left;
+	width: 33.3%;
+	margin-left: 50px;
+	margin-bottom: 0px;
+	padding: 20px 20px 40px 20px;
+	background: #4aaaa5;
+	color: #FFFFFF;
+}
+
+#menu {
+	float: right;
+	width: 33.3%;
+	padding-top: 30px;
+}
+
+.highlight {
+   color:#4aaaa5;
+   background-color: #FFFFFF;
+}
+
+form {
+	width:459px;
+	margin:0 auto;
+}
+
+label {
+	display:block;
+    margin-top: 20px;
+}
+
+
+input:focus, textarea:focus {
+		border:1px solid #97d6eb;
+}
+
+textarea {
+	height:213px;
+	font-family:Arial, Helvetica, sans-serif;
+	background:url(images/textarea-bg.jpg) right no-repeat #efefef;
+}
+
+#submit {
+	background:#4aaaa5;
+	color: #FFFFFF;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+ }
+
+li {
     float: left;
-    height: 250px;
-
+}
+li a{
+	text-align: center;
+    padding: 14px 16px;
 }
 
-.portfolio-item:nth-of-type(even){
-    float: right;
+
+#container {
+        width: 980px;
+        margin: 0 auto;
 }
 
-.portfolio-item h4 {
-    background: #4aaaa5;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-    position: absolute;
-    bottom: 15px;
-    width: 100%;
+
+@media only screen and (max-width: 980px) {
+	#container {
+        width: 960px;
+        margin: 0 auto;
+	}
 }
 
-.clearfix{
-    display: block;
-    clear: both;
-    margin-bottom: 135px;
+@media only screen and (max-width: 768px) {
+	#container {
+        margin: 100px auto;
+        padding: 20px;
+	}
+	#name {
+		margin: auto auto;
+		padding: 0px 0px 0px 0px;
+	}
+	#full {
+		clear: both;
+		width: 100%;
+		min-height: 100%;
+		margin: 10px auto;
+  	}
+	#main {
+		width: 100%;
+		padding: 20px;
+	}
+	#connect {
+		margin: 20px auto;
+		padding: 20px;
+	}
+	form {
+		width:75px;
+		float:left;
+		margin:0 auto;
+	}
+	
 }
 
-#center-column {
-    background: white;
-    padding: 25px;
-    border: 2px solid #ccc
-}
-
-#center-column {
-    width: 960px;
-    float: left;
-}
-
-#center-column h2 {
-    font-size: 24px;
-    padding: 15px 0;
-    margin-bottom: 20px;
-    border-bottom: 2px solid #ccc;
-}
-
-#image1 {
-    background: url(../images/image1.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-#image2 {
-    background: url(../images/image2.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-#image3 {
-    background: url(../images/image3.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-#image4 {
-    background: url(../images/image4.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-#image5 {
-    background: url(../images/image5.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-#image6 {
-    background: url(../images/image6.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
+@media only screen and (max-width: 640px) {
+	#container {
+        	margin: 100px auto;
+        	background: #aaa;
+        	padding: 20px;
+	}
+	#name {
+		margin: auto auto;
+		padding: 0px 10px 0px 0px;
+	}
+	#full {
+		clear: both;
+		width: 100%;
+		margin: 10px auto;
+		min-height: 100%;
+	}
+	#main {
+		width: 100%;
+		padding: 20px;
+	}
+	
+	#name {
+		background:#FFFFFF; 
+		color: #4aaaa5;
+	}
+	#connect {
+		margin: 20px auto;
+		padding: 20px;
+	}
+	form {
+		width:75%;
+		float: left;
+		margin:0 auto;
+	}
 }
